Reference Project for Send Email

--- a/Java-Spring/dscatalog/src/main/resources/application.properties
+++ b/Java-Spring/dscatalog/src/main/resources/application.properties
@@ -11,3 +11,13 @@ security.jwt.duration=${JWT_DURATION:86400}
 
 ! HOSTS AUTORIZADOS PARA IMPLEMENTAR O BACKEND
 cors.origins=${CORS_ORIGINS:http://localhost:3000,http://localhost:5173}
+
+! VARIAVEIS DE AMBIENTE PARA CONFIGURAÇÃO DE ENVIO DE EMAIL
+spring.mail.host=${EMAIL_HOST:smtp.gmail.com}
+spring.mail.port=${EMAIL_PORT:587}
+! COLOCAR SEU VERDADEIRO EMAIL NAS VARIAVEIS DE AMBIENTE
+spring.mail.username=${EMAIL_USERNAME:test@gmail.com}
+! COLOCAR A SENHA DE 16 DIGITOS NAS VARIAVEIS DE AMBIENTE
+spring.mail.password=${EMAIL_PASSWORD:123456}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
