Logic for send token with email

--- a/Java-Spring/dscatalog/src/main/resources/application.properties
+++ b/Java-Spring/dscatalog/src/main/resources/application.properties
@@ -21,3 +21,8 @@ spring.mail.username=${EMAIL_USERNAME:test@gmail.com}
 spring.mail.password=${EMAIL_PASSWORD:123456}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+! EXPIRAÇÃO DO TOKEN
+email.password-recover.token.minutes=${PASSWORD_RECOVER_TOKEN_MINUTES:30}
+! QUAL O ENDEREÇO DO FRONT END QUE VAI CHEGAR NO EMAIL DO USUÁRIO QUE VAI PARA A RECUPERAÇÃO DE SENHA
+email.password-recover.uri=${PASSWORD_RECOVER_URI:http://localhost:5173/recover-password/}
