USER AND ROLES  / SpringSecurity - UserService, UserController, Exceptions, ControllerExceptionHandler,

--- a/Java-Spring/DsLearn/src/main/resources/application.properties
+++ b/Java-Spring/DsLearn/src/main/resources/application.properties
@@ -1,3 +1,13 @@
-spring.profiles.active=test
+spring.profiles.active=${APP_PROFILE:test}
 
 spring.jpa.open-in-view=false
+
+! ESSES VALORES SAO APENAS DA APLICACAO DE TESTE
+security.client-id=${CLIENT_ID:myclientid}
+security.client-secret=${CLIENT_SECRET:myclientsecret}
+
+! DURAÇÃO DO TOKEN EM SEGUNDOS
+security.jwt.duration=${JWT_DURATION:86400}
+
+! HOSTS AUTORIZADOS PARA IMPLEMENTAR O BACKEND
+cors.origins=${CORS_ORIGINS:http://localhost:3000,http://localhost:5173}
