--- a/Java-Spring/jdbc/src/main/resources/application.properties
+++ b/Java-Spring/jdbc/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=jdbc
+logging.level.root = debug
 
 spring.datasource.url=jdbc:h2:mem:testdb;NON_KEYWORDS=USER
 spring.h2.console.enabled=true
